Add Initial Model

--- a/Ch01/Tutorial/Domain/Domain.csproj
+++ b/Ch01/Tutorial/Domain/Domain.csproj
@@ -50,6 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Student.cs" />
+    <Compile Include="Migrations\201609280548251_Initial.cs" />
+    <Compile Include="Migrations\201609280548251_Initial.Designer.cs">
+      <DependentUpon>201609280548251_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TutorialEfDbContext.cs" />
   </ItemGroup>
@@ -57,7 +62,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201609280548251_Initial.resx">
+      <DependentUpon>201609280548251_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
