--- a/Ch01/Tutorial/WebAPI/packages.config
+++ b/Ch01/Tutorial/WebAPI/packages.config
@@ -6,5 +6,12 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net452" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net452" />
+  <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
 </packages>
